@@ -1,4 +1,5 @@
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
 
 
@@ -14,8 +15,11 @@ import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.web.WebAppConfiguration;
 import org.junit.jupiter.api.Test;
 import spring2024.cs472.hotelwebsite.*;
+import spring2024.cs472.hotelwebsite.entities.Guest;
 import spring2024.cs472.hotelwebsite.entities.Room;
+import spring2024.cs472.hotelwebsite.entities.RoomReservation;
 import spring2024.cs472.hotelwebsite.repositories.RoomRepository;
+import spring2024.cs472.hotelwebsite.repositories.RoomReservationRepository;
 import spring2024.cs472.hotelwebsite.services.RoomService;
 
 @RunWith(SpringJUnit4ClassRunner.class)
@@ -35,6 +39,11 @@ class RoomServiceTest {
 
     @MockBean
     private RoomRepository roomRepository;
+
+    @MockBean
+    private RoomReservationRepository roomReservationRepository;
+
+
 
     @Test
     public void testGetAllRoomsSuccess(){
@@ -60,8 +69,8 @@ class RoomServiceTest {
         var startDate=LocalDate.of(2025,12,1);
         var endDate=LocalDate.of(2025,12,31);
         List<Room> rooms = roomRepo.findAll();
-        List<Room> availabel= roomService.getRoomsByAvailability(startDate, endDate);
-        assertThat(Arrays.asList(availabel.toArray())).isEqualTo(rooms);
+        List<Room> available= roomService.getRoomsByAvailability(startDate, endDate);
+        assertThat(available).isEqualTo(rooms);
     }
 
     @Test
@@ -70,8 +79,90 @@ class RoomServiceTest {
         var endDate=startDate.plusDays(1);
         Room room=roomService.getRoomByRoomNumber("103");
         List<Room> rooms = roomRepo.findAll();
-        List<Room> availabel= roomService.getRoomsByAvailability(startDate, endDate);
-        assertThat(Arrays.asList(availabel.toArray())).doesNotContain(room);
+        List<Room> available= roomService.getRoomsByAvailability(startDate, endDate);
+        assertThat(available).doesNotContain(room);
+    }
+
+    @Test
+    public void getAllRoomsShouldReturnAllRooms() {
+        Room room1 = new Room("101", "Single", 100, 1);
+        Room room2 = new Room("102", "Double", 200, 1);
+        List<Room> rooms = List.of(room1, room2);
+        when(roomRepository.findAll()).thenReturn(rooms);
+
+        List<Room> result = roomService.getAllRooms();
+
+        assertNotNull(result);
+        assertEquals(2, result.size());
+    }
+
+    @Test
+    public void getRoomsByAvailabilityShouldReturnAvailableRooms() {
+        Room room1 = new Room("101", "Single", 100, 1);
+        Room room2 = new Room("102", "Double", 200, 1);
+        List<Room> rooms = new ArrayList<>(List.of(room1, room2)); // Create a mutable list
+        when(roomRepository.findAll()).thenReturn(rooms);
+
+        Guest guest = new Guest("John Doe", "123 Main St", "01/01/2000", "john.doe@example.com", "123-456-7890", "johndoe", "password", "4111111111111111");
+        List<LocalDate> dates1 = Arrays.asList(LocalDate.now());
+        RoomReservation roomReservation1 = new RoomReservation(guest, room1, dates1);
+        when(roomReservationRepository.findByRoom(room1)).thenReturn(Arrays.asList(roomReservation1));
+
+        List<LocalDate> dates2 = Arrays.asList(LocalDate.now().minusDays(1));
+        RoomReservation roomReservation2 = new RoomReservation(guest, room2, dates2);
+        when(roomReservationRepository.findByRoom(room2)).thenReturn(Arrays.asList(roomReservation2));
+
+        LocalDate start = LocalDate.now();
+        LocalDate end = LocalDate.now().plusDays(1);
+        List<Room> result = roomService.getRoomsByAvailability(start, end);
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("102", result.get(0).getRoomNumber());
+    }
+
+    @Test
+    public void getRoomByIdShouldReturnRoom() {
+        Room room = new Room("101", "Single", 100, 1);
+        when(roomRepository.findById(1L)).thenReturn(room);
+
+        Room result = roomService.getRoomById(1);
+
+        assertNotNull(result);
+        assertEquals("101", result.getRoomNumber());
+    }
+
+    @Test
+    public void getRoomByRoomNumberShouldReturnRoom() {
+        Room room = new Room("101", "Single", 100, 1);
+        when(roomRepository.findByRoomNumber("101")).thenReturn(room);
+
+        Room result = roomService.getRoomByRoomNumber("101");
+
+        assertNotNull(result);
+        assertEquals("101", result.getRoomNumber());
+    }
+
+    @Test
+    public void saveRoomShouldReturnSavedRoom() {
+        Room room = new Room("101", "Single", 100, 1);
+        when(roomRepository.save(room)).thenReturn(room);
+
+        Room result = roomService.saveRoom(room);
+
+        assertNotNull(result);
+        assertEquals("101", result.getRoomNumber());
+    }
+
+    @Test
+    public void deleteRoomShouldDeleteRoom() {
+        Room room = new Room("101", "Single", 100, 1);
+        roomService.deleteRoom(room);
+        when(roomRepository.findByRoomNumber("101")).thenReturn(null);
+
+        Room result = roomService.getRoomByRoomNumber("101");
+
+        assertNull(result);
     }
 
 
